C3 version history
[ https://www.clanwolf.net | https://github.com/ClanWolf ]
----------------------------------------------------------------

CURRENTLY IN PROGRESS:
- P2: If user logs out and another logs in without closing the client, not all user related data is adapted to the new user
- P3: Web-View of the Starmap (ongoing, ~45%)
---
- P3: Updating the manual (ongoing): https://www.clanwolf.net/apps/C3/C3_Manual_de.pdf

----------------------------------------------------------------

Version 7.2.80 (02.03.2023)
- FIXED: Playerlist is not altered after drops were started
- STARTED: A timertask to check if open attacks lack dropleads to confirm results

Version 7.2.79 (01.03.2023)
- CHANGED: Removed a warning from netty channel (unknown channel option)

Version 7.2.78 (28.02.2023)
- CHANGED: Package structure for logging purposes
- FIXED: IRC related problems

Version 7.2.76 (28.02.2023)
- ADDED: New constant table for economy calculations
- FIXED: Couple of exceptions from testsession (27.02.2023)

Version 7.2.70 (23.02.2023)
- CHANGED: Removed unnecessary parts from nadron server
- CHANGED: Logging server uptime value now

Version 7.2.65 (22.02.2023)
- FIXED: If lobby owner leaves, the new lobby owner must not be offline (will not be promoted if offline)
- CHANGED: Removed version variables from parent pom file (does not work with ide integration)

Version 7.2.63 (22.02.2023)
- UPDATED: Libraries
- UPDATED: JavaFX to 19.0.2.1
- CHANGED: MySQL dialect setting
- CHANGED: Waiting loop on returning session to user on login (fixing login errors)

Version 7.2.57 (17.02.2023)
- FIXED: Offline users are not considered to take over lobby if dropleads disconnect

Version 7.2.56 (16.02.2023)
- UPDATED: Libraries
- CHANGED: Log format
- REMOVED: Not working filter options in log pane

Version 7.2.50 (15.02.2023)
- FIXED: NPE due to empty incoming universe
- FIXED: Lobby handling if droplead leaves or loses connection

Version 7.2.39 (09.02.2023)