@@ -27,7 +27,7 @@
 package net.clanwolf.starmap.server.process;
 
 import net.clanwolf.starmap.constants.Constants;
-import net.clanwolf.starmap.server.Nexus.Nexus;
+import net.clanwolf.starmap.server.nexus2.Nexus;
 import net.clanwolf.starmap.server.persistence.daos.jpadaoimpl.FactionDAO;
 import net.clanwolf.starmap.server.persistence.daos.jpadaoimpl.RolePlayCharacterStatsDAO;
 import net.clanwolf.starmap.server.persistence.daos.jpadaoimpl.StarSystemDataDAO;
