@@ -61,6 +61,8 @@ public enum GAMESTATEMODES {
 
 	BROADCAST_SEND_NEW_PLAYERLIST,              /* Inform all clients after a successfull login */
 	FOUND_BROKEN_ATTACK,
+	BROKEN_ATTACK_KILL_FIVE_MINUTE_WARNING,
+	BROKEN_ATTACK_KILL_AFTER_TIMEOUT,
 	ROLEPLAY_GET_ALLSTORIES,                    /* OBJECT: null */
 	ROLEPLAY_REQUEST_ALLSTORIES,                /* OBJECT: Arraylist<RolePlayStoryDTO> - Gets a list with storys and chapters and steps*/
 	ROLEPLAY_GET_STORYANDCHAPTER,               /* OBJECT: null */
